# ElRey

./: .gitignore  CMakeLists.txt  ElReyConfig.h  README.md  SolutionToGridCompound.txt  TODO.txt  cameraTypes.json  differentSpheres.json  makefile  sampleNodes.json  sceneData.json  sceneDataTeddy.json  sceneDiffuseSpheres.json  sceneGlossySpecularReflectiveSphere.json  sceneGridOfGrids.json  sceneReflectiveSphere.json  standardSceneTranslucSphere.json
LegacySrc/Materials/: CheckerTexture.h  ConstantTexture.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Material.h
LegacySrc/Math/: BVHNode.h  Box.h  FlippedNormalsHittable.h  HittableList.h  Pdf.h  Perlin.h  RotateY.h  Sphere.h  Vec3.h  YzRect.h
src/: Common.h  ElReyConfig.h.in  MainWindow.cpp
src/AccelerationStructures/: BaseAccelerator.cpp  BaseAccelerator.h  GridAccelerator.cpp  GridAccelerator.h  SimpleWorld.cpp  SimpleWorld.h
src/Camera/: Camera.h
src/Cameras/: Camera.cpp  Camera.h  FisheyeCamera.cpp  FisheyeCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  PinholeCamera.cpp  PinholeCamera.h  SphericalPanoramicCamera.cpp  SphericalPanoramicCamera.h  ThinLensCamera.cpp  ThinLensCamera.h
src/Materials/: Color.cpp  Color.h  Color3.cpp  Color3.h  Dielectric.h  DielectricMaterial.cpp  DielectricMaterial.h  DiffuseLight.h  GlossySpecularMaterial.cpp  GlossySpecularMaterial.h  ImageTexture.h  Isotropic.h  Lambertian.h  LambertianMaterial.cpp  LambertianMaterial.h  Material.cpp  Material.h  Metal.h  NoiseTexture.h  PhongMaterial.cpp  PhongMaterial.h  ReflectiveMaterial.cpp  ReflectiveMaterial.h  SimpleEmissiveMaterial.cpp  SimpleEmissiveMaterial.h  Texture.h  TransparentMaterial.cpp  TransparentMaterial.h
src/Math/: AABB.h  AABBox.cpp  AABBox.h  BVHNode.h  Camera.h  Common.h  CommonMath.cpp  CommonMath.h  ConstantMedium.h  CosinePdf.h  CubicNoiseFunction.cpp  CubicNoiseFunction.h  Hittable.h  HittableList.h  HittablePdf.h  LinearNoiseFunction.cpp  LinearNoiseFunction.h  Matrix.cpp  Matrix.h  Matrix4x4.cpp  Matrix4x4.h  MixturePdf.h  MovingSphere.h  NoiseFunction.cpp  NoiseFunction.h  Onb.h  Perlin.h  Plane.cpp  Plane.h  Point2.cpp  Point2.h  Point3.cpp  Point3.h  Point4.cpp  Point4.h  Primitive.h  Ray.cpp  Ray.h  Rectangle.cpp  Rectangle.h  (+10 more)
src/Performance/: FPSCounter.cpp  FPSCounter.h
src/Primitives/: AABBoxPrim.cpp  AABBoxPrim.h  CompoundObject.cpp  CompoundObject.h  Disk.cpp  Disk.h  GridPrimitive.cpp  GridPrimitive.h  InstancePrimitive.cpp  InstancePrimitive.h  OpenCylinder.cpp  OpenCylinder.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h  TriangleMeshPrim.cpp  TriangleMeshPrim.h
src/Sampling/: GenericMultiSampler.cpp  GenericMultiSampler.h  (+16 more)
srcMC/: main.cpp
variousScenes/: marbleBrick.json  marbleRampSphere.json  noisyRec.json  sampleNodes.json  sceneGlossySpecularSphere.json  standardSceneFresnelSphere.json  standardSceneTranslucSphere.json  texturedObjects.json  texturedWall.json
(+73 files in other folders)
